Coverity analysis defect 101639: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.10
    • Affects Version/s: None
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • Sharding 2017-07-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Use of an uninitialized variable

      Defect 101639 (STATIC_C)
      Checker UNINIT (subcategory none)
      File: /src/mongo/db/s/shard_server_catalog_cache_loader.cpp
      Function mongo::ShardServerCatalogCacheLoader::TaskList::getEnqueuedMetadataForTerm(long long) const
      /src/mongo/db/s/shard_server_catalog_cache_loader.cpp, line: 687
      Declaring variable "collAndChunks".

              CollectionAndChangedChunks collAndChunks;
      

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: