SERVER-29325 add constructors for CollectionAndChangedChunks struct